parse/tests/snapshots/parse_test__inputs@include_basic.ninja.snap
---
source: parse/tests/parse_test.rs
expression: ast
input_file: parse/tests/parse_inputs/include_basic.ninja
---
Description {
    builds: [
        Build {
            action: Command(
                "echo baz messed_up",
            ),
            inputs: [],
            implicit_inputs: [],
            order_inputs: [],
            outputs: [
                [
                    98,
                    97,
                    122,
                ],
            ],
        },
        Build {
            action: Command(
                "echo bar 3",
            ),
            inputs: [],
            implicit_inputs: [],
            order_inputs: [],
            outputs: [
                [
                    98,
                    97,
                    114,
                ],
            ],
        },
    ],
}
