parse/tests/snapshots/parse_test__inputs@newline_at_assign.ninja.snap
---
source: parse/tests/parse_test.rs
expression: e
input_file: parse/tests/parse_inputs/newline_at_assign.ninja
---
parse_inputs/newline_at_assign.ninja:2:12: Expected value, got newline
  command =
           ^ near here
