parse/tests/snapshots/parse_test__inputs@rules_evaluate_lazily.ninja.snap
---
source: parse/tests/parse_test.rs
expression: ast
input_file: parse/tests/parse_inputs/rules_evaluate_lazily.ninja
---
Description {
    builds: [
        Build {
            action: Command(
                "echo foo_suffix",
            ),
            inputs: [],
            implicit_inputs: [],
            outputs: [
                [
                    102,
                    111,
                    111,
                ],
            ],
        },
    ],
}
