parse/tests/snapshots/parse_test__inputs@simple.ninja.snap
---
source: parse/tests/parse_test.rs
expression: e
input_file: parse/tests/parse_inputs/simple.ninja
---
parse_inputs/simple.ninja:2:5: Expected identifier, got newline
rule
    ^ near here
