parse/tests/snapshots/parse_test__inputs@toplevel_var2.ninja.snap
---
source: parse/tests/parse_test.rs
expression: ast
input_file: parse/tests/parse_inputs/toplevel_var2.ninja
---
Description {
    builds: [
        Build {
            action: Command(
                "cc -g -Wall -o foo foo.c",
            ),
            inputs: [
                [
                    102,
                    111,
                    111,
                    46,
                    99,
                ],
            ],
            outputs: [
                [
                    102,
                    111,
                    111,
                ],
            ],
        },
    ],
}
